IGNITE-11189: Java 11: changes for tools & tests